Changelog for Percona Toolkit

 * Fixed bug   PT-1563 : Fixed pt-show-grants for MySQL 5.6
 * Improvement PT-1562 : pt-mysql-summary: Fix mysqld command for Travis
 * Improvement  PT-242 : (pt-stalk) Include SHOW SLAVE STATUS on 5.7 (Thanks Marcelo Altmann)
 * Fixed bug    PT-241 : (pt-stalk) Slave queries doesn't run on 5.7 (Thanks Marcelo Altmann)

v3.0.10 released 2018-05-21

 * Fixed bug   PT-1556 : pt-table-checksum 3.0.9 doesn't change binlog_format to statement anymore
 * Improvement PT-1546 : Improved support of MySQL 8 roles
 * Improvement PT-1543 : Encrypted table status query causes high load over multiple minutes
 * Improvement PT-1536 : Add info about encrypted tablespaces in pt-mysql-summary
 * Feature      PT-131 : Make pt-table checksum to disable QRT plugin
 * Feature      PT-118 : pt-table-checksum report the number of rows of difference between master and slave

v3.0.9 released 2018-04-17

 * Feature     PT-1530 : Add support for encryption status to mysql-summary
 * Feature     PT-1526 : Add ndb status to pt-mysql-summary (Thanks Fernando Ipar)
 * Feature     PT-1525 : Added support for MySQL 8 roles into pt-mysql-summary
 * Feature     PT-1509 : Only set binlog_format when necessary (Thanks Moritz Lenz)
 * Feature     PT-1508 : Adding --read-only-interval flag, and read-only check on wake-up (Thanks Shlomi Noach)
 * Improvement PT-1507 : pt-summary does not reliably read in the transparent huge pages setting (Thanks Nick Veenhof)
 * New tool    PT-1501 : pt-secure-collect - New tool to collect and sanitize pt-tools outputs
 * Feature      PT-243 : Adding --max-hostname-length and --max-line-length to pt-query-digest

v3.0.8 released 2018-03-13

 * Feature     PT-1500 : add --secure-slowlog option to pt-query digest

v3.0.7 released 2018-03-01

 * Fixed Bug    PT-244 : pt-online-schema-change --data-dir option broken for partitioned table
 * Feature      PT-633 : Added --mysql-only option to pt-stalk for RDS