@@ -6240,6 +6240,11 @@ sub main {
          . "$src->{db_tbl} does not have a PRIMARY KEY";
    }
 
+   warn "====================================================================================================";
+   warn Data::Dumper::Dumper($src);
+   warn "====================================================================================================";
+   warn Data::Dumper::Dumper($dst);
+   warn "====================================================================================================";
    if ( $dst && $o->get('check-columns') ) {
       my @not_in_src = grep {
          !$src->{info}->{is_col}->{$_}
