@@ -220,7 +220,7 @@ sub remove_quoted_text {
    my ($string) = @_;
    $string =~ s/[^\\]`[^`]*[^\\]`//g; 
    $string =~ s/[^\\]"[^"]*[^\\]"//g; 
-   $string =~ s/[^\\]"[^"]*[^\\]"//g; 
+   $string =~ s/[^\\]'[^']*[^\\]'//g; 
    return $string;
 }
 
