@@ -1,5 +1,6 @@
 Changelog for Percona Toolkit
 
+ * Fixed bug   PT-1570 : pt-archiver fails to detect columns with the word GENERATED as part of the comment
  * Fixed bug   PT-1563 : Fixed pt-show-grants for MySQL 5.6
  * Improvement PT-1562 : pt-mysql-summary: Fix mysqld command for Travis
  * Improvement  PT-242 : (pt-stalk) Include SHOW SLAVE STATUS on 5.7 (Thanks Marcelo Altmann)
